--- a/mbp-webapp/src/app/reset-password/reset-password.component.html
+++ b/mbp-webapp/src/app/reset-password/reset-password.component.html
@@ -16,8 +16,14 @@
 			</div>
 			<div class="row">
 				<div class="col-12">
-					<button class="btn MBP_BTN_SUBMIT float-right" type="submit"
-						[disabled]="createTokenForm.invalid">Valider</button>
+					<button class="btn MBP_BTN_SUBMIT float-right" type="submit" *ngIf="!isWait"
+						[disabled]="createTokenForm.invalid">Valider
+          </button>
+          <div class="float-right" *ngIf="isWait">
+            <div class="spinner-border MBP_SPINNER" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
 				</div>
 			</div>
 		</form>
@@ -26,19 +32,19 @@
 			<div class="form-group row align-self-center">
 				<div class="col-3"></div>
 				<div class="col-6">
-					<label for="password">Nouveau mot de passe : </label> 
+					<label for="password">Nouveau mot de passe : </label>
 					<input type="password"
 						class="form-control form-control-sm" id="email"
 						formControlName="password">
 					 <p class="text-info">Au moins 7 caractères avec 1 majuscule, 1 miniscule et 1 chiffre</p>
-					
+
 				</div>
 				<div class="col-3"></div>
 			</div>
 			<div class="form-group row align-self-center">
 				<div class="col-3"></div>
 				<div class="col-6">
-					<label for="confirmPassword">Confirmer le mot de passe : </label> 
+					<label for="confirmPassword">Confirmer le mot de passe : </label>
 					<input type="password"
 						class="form-control form-control-sm" id="email"
 						formControlName="confirmPassword">
@@ -49,9 +55,15 @@
 
 			<div class="row">
 				<div class="col-12">
-					<button class="btn MBP_BTN_SUBMIT float-right" type="submit"
+					<button class="btn MBP_BTN_SUBMIT float-right" type="submit" *ngIf="!isWait"
 						[disabled]="resetPasswordForm.invalid">Changer le mot de
-						passe</button>
+						passe
+          </button>
+          <div class="float-right" *ngIf="isWait">
+            <div class="spinner-border MBP_SPINNER" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
 				</div>
 			</div>
 		</form>
