--- a/mbp-webapp/src/app/edit-advert/edit-advert.component.html
+++ b/mbp-webapp/src/app/edit-advert/edit-advert.component.html
@@ -3,7 +3,7 @@
     <div class="h2 text-center">Modifier une annonce</div>
   </div>
   <div class="MBP_CORPS_CONTENU">
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmitForm()">
+    <form [formGroup]="editForm" (ngSubmit)="onSubmitForm()">
       <div class="row">
         <div class="form-group col">
           <label for="NomCreaAnnonce">Nom</label>
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group col">
           <label for="DateSeanceCreaAnnonce">Date de la séance</label>
-          <input type="date" id="DateSeanceCreaAnnonce" class="form-control" placeholder="Indiquez la date de la séance" formControlName="DateSeanceCreaAnnonce">
+          <input type="date" id="DateSeanceCreaAnnonce" class="form-control" min="{{toDate | date:'yyyy-MM-dd'}}" placeholder="Indiquez la date de la séance" formControlName="DateSeanceCreaAnnonce">
         </div>
       </div>
       <div class="MBP_LINE_1PX"></div>
@@ -44,7 +44,12 @@
       </div>
       <div class="row">
         <div class="col text-center">
-          <button type="submit" class="btn MBP_BTN_SUBMIT">Mettre à jour</button>
+          <button type="submit" class="btn float-right MBP_BTN_SUBMIT" *ngIf="!isWait" [disabled]="editForm.invalid">Mettre à jour</button>
+          <div class="float-right" *ngIf="isWait">
+            <div class="spinner-border MBP_SPINNER" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
         </div>
       </div>
     </form>
