--- a/mbp-webapp/src/app/support/support.component.html
+++ b/mbp-webapp/src/app/support/support.component.html
@@ -30,7 +30,12 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <button class="btn float-right MBP_BTN_SUBMIT" type="submit" [disabled]="supportForm.invalid">Envoyer</button>
+                  <button class="btn float-right MBP_BTN_SUBMIT" type="submit" *ngIf="!isWait" [disabled]="supportForm.invalid">Envoyer</button>
+                  <div class="float-right" *ngIf="isWait">
+                    <div class="spinner-border MBP_SPINNER" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
+                  </div>
                 </div>
             </div>
         </form>
