--- a/mbp-webapp/src/app/advert-owner-view/advert-owner-view.component.html
+++ b/mbp-webapp/src/app/advert-owner-view/advert-owner-view.component.html
@@ -1,1 +1,59 @@
-<p>advert-owner-view works!</p>
+<div class="MBP_CORPS">
+  <div class="MBP_CORPS_TITRE">
+    <div class="h2 text-center">Consulter une annonce</div>
+  </div>
+  <div class="MBP_CORPS_CONTENU">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmitForm()">
+      <div class="row">
+        <div class="form-group col">
+          <label for="NomCreaAnnonce">Nom</label>
+          <input type="text" id="NomCreaAnnonce" class="form-control" placeholder="Nom de votre annonce" formControlName="NomCreaAnnonce" ng-disabled="all">
+        </div>
+        <div class="form-group col">
+          <label for="NiveauCreaAnnonce">Niveau pratiquant</label>
+          <select id="NiveauCreaAnnonce" class="form-control form-control-sm" formControlName="NiveauCreaAnnonce" ng-disabled="all">
+            <option value="DEBUTANT">Débutant</option>
+            <option value="AMATEUR">Amateur</option>
+            <option value="AVANCE">Avancé</option>
+            <option value="PROFESSIONEL">Professionnel</option>
+          </select>
+        </div>
+      </div>
+      <div class="MBP_LINE_1PX"></div>
+      <div class="form-group">
+        <label for="DescriptionCreaAnnonce">Description</label>
+        <input type="txt" id="DescriptionCreaAnnonce" class="form-control"placeholder="Description pour votre annonce" formControlName="DescriptionCreaAnnonce" ng-disabled="all">
+      </div>
+      <div class="MBP_LINE_1PX"></div>
+      <div class="row">
+        <div class="form-group col">
+          <label for="DureeSeanceCreaAnnonce">Durée de la séance</label>
+          <input type="time" id="DureeSeanceCreaAnnonce" class="form-control" placeholder="Indiquez la durée de la séance" formControlName="DureeSeanceCreaAnnonce" ng-disabled="all">
+        </div>
+        <div class="form-group col">
+          <label for="DateSeanceCreaAnnonce">Date de la séance</label>
+          <input type="date" id="DateSeanceCreaAnnonce" class="form-control" placeholder="Indiquez la date de la séance" formControlName="DateSeanceCreaAnnonce" ng-disabled="all">
+        </div>
+      </div>
+      <div class="MBP_LINE_1PX"></div>
+      <div class="form-group">
+        <label for="typeSeanceCreaAnnonce">Type de séance</label>
+        <select class="form-control" id="typeSeanceCreaAnnonce" formControlName="typeSeanceCreaAnnonce" ng-disabled="all">
+          <option *ngFor="let typeSeance of obsTypeSeance | async" value="{{typeSeance.idSeance}}">{{typeSeance.libelle}}</option>
+        </select>
+      </div>
+      <div class="row">
+        <div class="col text-center">
+          <tr *ngFor="let item of ItemsArray">
+            <td>{{item.nom}}</td>
+            <td>{{item.prenom}}</td>
+            <td>
+              <button type="button">Supprimer Participant</button>
+            </td>
+          </tr>
+        </div>
+      </div>
+    </form>
+    <p class="text-danger">{{errorMessage}}</p>
+  </div>
+</div>
