--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -17,6 +17,9 @@
             <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="listAdverts">Liste des annonces</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="advertListProprio">Mes annonces</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="friendManager">Mes contacts</a>
           </li>
 		      <li class="nav-item">
