Clean code + fix bugs + Sonar

--- a/mbp-webapp/src/app/advert-owner-list/advert-owner-list.component.html
+++ b/mbp-webapp/src/app/advert-owner-list/advert-owner-list.component.html
@@ -4,6 +4,7 @@
   </div>
   <div class="MBP_CORPS_CONTENU">
     <table class="table">
+      <caption></caption>
       <thead>
       <tr>
         <th scope="col">Prénom</th>
