--- a/mbp-webapp/src/app/advert-view/advert-view.component.html
+++ b/mbp-webapp/src/app/advert-view/advert-view.component.html
@@ -22,7 +22,7 @@
       <div class="MBP_LINE_1PX"></div>
       <div class="form-group">
         <label for="DescriptionCreaAnnonce">Description</label>
-        <input type="txt" id="DescriptionCreaAnnonce" class="form-control"placeholder="Description pour votre annonce" formControlName="DescriptionCreaAnnonce" [disabled]="true">
+        <textarea type="txt" id="DescriptionCreaAnnonce" class="form-control"placeholder="Description pour votre annonce" rows="2" formControlName="DescriptionCreaAnnonce" [disabled]="true"></textarea>
       </div>
       <div class="MBP_LINE_1PX"></div>
       <div class="row">
