--- a/mbp-webapp/src/app/advert-list/advert-list.component.html
+++ b/mbp-webapp/src/app/advert-list/advert-list.component.html
@@ -1,11 +1,16 @@
 <div class="MBP_CORPS">
   <div class="MBP_CORPS_TITRE">
-    <div class="h2 text-center">Les annonces</div>
+    <div class="h2 text-center">Liste des annonces</div>
   </div>
   <div class="MBP_CORPS_CONTENU">
     <div class="FILTRE_ANNONCE">
       <div class="EN_TETE_FILTRE_ANNONCE">
-        <div class="h5 font-weight-bold" (click)="showZoneFiltre();">Filtrer les annonces </div>
+        <div class="row" style="margin-left: 1%">
+          <div class="h5 font-weight-bold">Filtrer les annonces </div>
+          <button mat-icon-button color="warn" (click)="showZoneFiltre()">
+            <mat-icon>keyboard_arrow_down</mat-icon>
+          </button>
+        </div>
       </div>
       <div class="ZONE_FILTRE_ANNONCE" >
         <form #formFiltre *ngIf="zoneFiltreVisible" [formGroup]="filtreAnnonceForm" (ngSubmit)="submitForm();" id="form-filtre-annonce" name="form-filtre-annonce">
@@ -47,7 +52,7 @@
               <label for="select-salle">Salle de sport : </label>
               <select name="salle" formControlName="salle" id="select-salle" class="form-control">
                 <option value=""></option>
-                <option *ngFor="let salle of obsSalles | async" value="{{salle.sid}}">{{salle.nom}}</option>
+                <option *ngFor="let salle of obsSalles | async" value="{{salle.nom}}">{{salle.nom}}</option>
               </select>
             </div>
             <div class="col">
@@ -56,6 +61,7 @@
                 <option value=""></option>
                 <option value="H">HOMME</option>
                 <option value="F">FEMME</option>
+                <option value="NC">Autre</option>
               </select>
             </div>
           </div>
@@ -70,10 +76,12 @@
         </form>
       </div>
     </div>
-    <table class="table">
+    <table class="table" *ngIf="ItemsArray.length > 0">
       <thead>
       <tr>
         <th scope="col">Nom de l'annonce</th>
+        <th scope="col">Salle</th>
+        <th scope="col">Partenaire</th>
         <th scope="col">Niveau</th>
         <th scope="col">Type</th>
         <th scope="col">Date</th>
@@ -83,21 +91,27 @@
       </thead>
       <tbody>
         <tr *ngFor="let item of ItemsArray">
-          <td>{{item.nomAnnonce}}</td>
+          <td>{{item.nom}}</td>
+          <td>{{item.salleAnnonceur}}</td>
+          <td>{{item.sexAnnonceur}}</td>
           <td>{{item.niveau}}</td>
           <td>{{item.type}}</td>
-          <td>{{item.date}}</td>
+          <td>{{item.dateSeance}}</td>
           <td>{{item.duree * 60000 | date: 'H:mm':'UTC'}}</td>
           <td>
-            <button mat-mini-fab color="primary" (click)="addParticipation(item.aid)">
-          		<mat-icon>edit</mat-icon>
-       		</button>
-        	<button mat-mini-fab color="warn" routerLink="/viewAnnonce/{{item.aid}}">
-          		<mat-icon>delete</mat-icon>
-        	</button>
+            <button mat-mini-fab color="accent" (click)="addParticipation(item.aid, item.nom)">
+          		<mat-icon>group_add</mat-icon>
+       		  </button>
+        	  <button mat-mini-fab color="primary" routerLink="/viewAnnonce/{{item.aid}}">
+          		<mat-icon>visibility</mat-icon>
+        	  </button>
           </td>
         </tr>
       </tbody>
     </table>
+    <p class="text-info text-center" *ngIf="ItemsArray.length == 0">Il n'y a aucune annonce à afficher.</p>
+    <div class="MBP-alert">
+      <ngb-alert *ngIf="participate_success" type="success" (close)="participate_success = false">Vous avez été ajouté comme participant à l'annonce {{nomAnnonce}}</ngb-alert>
+    </div>
   </div>
 </div>
