--- a/mbp-webapp/src/app/advert-list/advert-list.component.scss
+++ b/mbp-webapp/src/app/advert-list/advert-list.component.scss
@@ -14,4 +14,44 @@
     padding: 0.5vh 0.5vw 0.5vh 0.5vw;
 }
 
+.MBP-alert {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  width: 20%
+}
+
+.MBP_CORPS {
+  background-image: url('../../assets/img/photo_accueil/page-background-1.jpg');
+  width: 100%;
+  height: 130vh;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.MBP_CORPS_CONTENU {
+  background-color: white;
+  height: 90%;
+}
+
+@media screen and (max-height: 600px) {
+  .h2 {
+    font-size: 3vh;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .h2 {
+    font-size: 5vw;
+  }
+}
+
+.MBP_CORPS_TITRE {
+  background-color: white;
+  height: 10vh;
+}
+
 
