--- a/mbp-webapp/src/app/advert-owner-list/advert-owner-list.component.html
+++ b/mbp-webapp/src/app/advert-owner-list/advert-owner-list.component.html
@@ -1,15 +1,15 @@
 <div class="MBP_CORPS">
   <div class="MBP_CORPS_TITRE">
-    <div class="h2 text-center">Les annonces</div>
+    <div class="h2 text-center">Mes annonces</div>
   </div>
   <div class="MBP_CORPS_CONTENU">
-    <table class="table">
+    <table class="table" *ngIf="ItemsArray.length > 0">
       <caption></caption>
       <thead>
       <tr>
-        <th scope="col">Prénom</th>
         <th scope="col">Nom de l'annonce</th>
-        <th scope="col">Description</th>
+        <th scope="col">Niveau</th>
+        <th scope="col">Type</th>
         <th scope="col">Date</th>
         <th scope="col">Durée</th>
         <th scope="col">Actions</th>
@@ -17,18 +17,25 @@
       </thead>
       <tbody>
       <tr *ngFor="let item of ItemsArray">
-        <td>{{item.nomAnnonce}}</td>
-        <td>{{item.prenom}}</td>
-        <td>{{item.description}}</td>
+        <td>{{item.nom}}</td>
+        <td>{{item.niveau}}</td>
+        <td>{{item.type}}</td>
         <td>{{item.dateSeance}}</td>
-        <td>{{item.duree}}</td>
+        <td>{{item.duree * 60000 | date: 'H:mm':'UTC'}}</td>
         <td>
-          <button type="button" routerLink="/viewAnnonceProprio/{{item.aid}}">Voir</button>
-          <button type="button" routerLink="/editAdvert/{{item.aid}}">Edit</button>
-          <button type="button" class="close" (click)="deleteAdvertById(item.aid)">Delete</button>
+          <button mat-mini-fab color="accent" routerLink="/viewAnnonceProprio/{{item.aid}}">
+            <mat-icon>visibility</mat-icon>
+          </button>
+          <button mat-mini-fab color="primary" routerLink="/editAdvert/{{item.aid}}">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-mini-fab color="warn" (click)="confirmDeleteAdvert(item)">
+            <mat-icon>delete</mat-icon>
+          </button>
         </td>
       </tr>
       </tbody>
     </table>
+    <p class="text-info text-center" *ngIf="ItemsArray.length == 0">Vous n'avez aucune annonce à ce jour.</p>
   </div>
 </div>
