--- a/mbp-webapp/src/app/advert-owner-view/advert-owner-view.component.html
+++ b/mbp-webapp/src/app/advert-owner-view/advert-owner-view.component.html
@@ -46,6 +46,7 @@
       <div class="form-group">
         <label>Participants</label>
         <table class="table" *ngIf="ItemsArray.length > 0">
+          <caption></caption>
           <thead>
           <tr>
             <th scope="col">Nom</th>
