--- a/mbp-webapp/src/app/advert-list/advert-list.component.html
+++ b/mbp-webapp/src/app/advert-list/advert-list.component.html
@@ -77,6 +77,7 @@
       </div>
     </div>
     <table class="table" *ngIf="ItemsArray.length > 0">
+      <caption></caption>
       <thead>
       <tr>
         <th scope="col">Nom de l'annonce</th>
