--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -35,6 +35,9 @@
                 <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="listeUser">Utilisateurs</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="listAdvertsAdmin">Liste des annonces</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" routerLink="messageGeneral">Message Général</a>
             </li>
             <li class="nav-item">
